--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
-    "apollo-server-express": "^2.15.0"
+    "apollo-server-express": "^2.15.0",
+    "bcrypt": "^5.0.1",
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.4.6",
+    "mongosh": "^1.5.1",
+    "mysql": "^2.18.1"
   }
 }
