--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.6",
     "mongosh": "^1.5.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "react": "^18.2.0"
   }
 }
